# Project-2-Image-Recovery-Rent-a-Car

./: .gitignore  README.md
Image-Recovery/: CMakeLists.txt  README.md  resources.qrc
Image-Recovery/Image-Recovery/: CMakeLists.txt  resources.qrc
Image-Recovery/Image-Recovery/src/: main.cpp
Image-Recovery/Image-Recovery/src/algorithm/: DataManager.cpp  DataManager.h  Genetic.cpp  Genetic.h  datamanager.cpp  datamanager.h  genetic.cpp  genetic.h  imagemanager.cpp
Image-Recovery/Image-Recovery/src/data-structures/: SimpleList.h  SimpleNode.h  simplelist.h  simplenode.h
Image-Recovery/Image-Recovery/src/ui/: geneticscreen.cpp  geneticscreen.h  geneticscreen.ui  homescreen.cpp  homescreen.ui  loadscreen.cpp  loadscreen.h  loadscreen.ui  mainscreen.cpp  mainscreen.h  mainscreen.ui  setupscreen.cpp  setupscreen.h  setupscreen.ui
Image-Recovery/src/: main.cpp
Image-Recovery/src/algorithm/: datamanager.cpp  datamanager.h  genetic.cpp  genetic.h
Image-Recovery/src/ui/: mainscreen.cpp  mainscreen.h  mainscreen.ui
Rent-A-Car/: .gitignore  CMakeLists.txt  README.md
Rent-A-Car/src/: .gitignore  main.cpp
Rent-A-Car/src/DataStructures/Graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Vertex.cpp
Rent-A-Car/src/DataStructures/SimpleList/: SimpleList.h
Rent-A-Car/src/GraphicElements/: mainwindow.cpp  mainwindow.h
Rent-A-Car/src/GraphicElements/Graph/: EdgeItem.h  GraphWindow.cpp  GraphWindow.h  VertexItem.h
Rent-A-Car/src/LogicManagment/: TravelAssistant.cpp  TravelAssistant.h
Rent-A-Car/src/Rent_A_Car/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Rent-A-Car/src/Rent_A_Car/DataStructures/Graph/: Edge.h  Graph.cpp  Graph.h  Vertex.h
Rent-A-Car/src/Rent_A_Car/DataStructures/SimpleList/: SimpleList.h  SimpleNode.h
Rent-A-Car/src/Rent_A_Car/GraphicElements/: mainwindow.cpp  mainwindow.h
Rent-A-Car/src/Rent_A_Car/GraphicElements/Graph/: EdgeItem.cpp  EdgeItem.h  GraphWindow.cpp  GraphWindow.h  VertexItem.cpp  VertexItem.h
Rent-A-Car/src/Rent_A_Car/LogicManagment/: TravelAssistant.cpp  TravelAssistant.h
docs/doxygen/Image-Recovery/html/: annotated.html  annotated_dup.js  class_data_manager-members.html  class_data_manager.html  class_data_manager.js  class_genetic-members.html  class_genetic.html  class_genetic.js  class_main_screen-members.html  class_main_screen.html  class_main_screen.js  classes.html  datamanager_8h_source.html  dir_1788f8309b1a812dcb800a185471cf6c.html  dir_1788f8309b1a812dcb800a185471cf6c.js  dir_692f640cc74363071c5c0e14282656e9.html  dir_692f640cc74363071c5c0e14282656e9.js  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  genetic_8h_source.html  hierarchy.html  hierarchy.js  index.html  mainscreen_8h_source.html  menudata.js  navtreedata.js  navtreeindex0.js  struct_chromosome-members.html  struct_chromosome.html  struct_chromosome.js  struct_population-members.html  struct_population.html  struct_population.js
docs/doxygen/Rent-A-Car/html/: _edge_8h_source.html  _edge_item_8h_source.html  _graph_8h_source.html  _graph_window_8h_source.html  _simple_list_8h_source.html  _simple_node_8h_source.html  _travel_assistant_8h_source.html  _vertex_8h_source.html  _vertex_item_8h_source.html  annotated.html  annotated_dup.js  class_edge-members.html  class_edge.html  class_edge.js  class_edge_item-members.html  class_edge_item.html  class_edge_item.js  class_graph-members.html  class_graph.html  class_graph.js  class_graph_window-members.html  class_graph_window.html  class_graph_window.js  class_main_window-members.html  class_main_window.html  class_simple_list-members.html  class_simple_list.html  class_simple_list.js  class_simple_node-members.html  class_simple_node.html  class_simple_node.js  class_travel_assistant-members.html  class_travel_assistant.html  class_travel_assistant.js  class_vertex-members.html  class_vertex.html  class_vertex.js  class_vertex_item-members.html  class_vertex_item.html  class_vertex_item.js  (+24 more)
(+59 files in other folders)
